# dmengine

./: .gitattributes  .gitignore  CHANGES  CHANGES.rst  CHANGES.txt  LICENSE  LICENSE.txt  MANIFEST.in  README.rst  TODO  pyproject.toml  requirements.txt  run-tests.py  setup.cfg  setup.py  try-examples.py
.github/workflows/: build.yaml
dmengine/: __init__.py  __main__.py  _compat.py  analysis.py  calculation.py  contexts.py  exponents.py  features.py  insertion.py  meta.py  outcontexts.py  readjustments.py  rules.py  tools.py  types.py  vis.py
dmengine/reporting/: __init__.py  backend.py  common.py  contexts.py  examples.py  features.py  inputs.py  log.py  paradigms.py  pdflatex.py  readjustments.py  report.py  rules.py  template.tex  tools.py  vis.py
examples/: example.yaml  german.yaml  specificity.yaml  thulung.yaml
tests/: test_features.py
