[project]
name = "dmengine"
authors = [{ name = "Sebastian Bank", email = "sebastian.bank@uni-leipzig.de" }]
description = "Distributed Morphology calculator"
keywords = ["DM", "Halle", "Marantz", "impoverishment", "fission", "linguistics"]
readme = "README.rst"
license = "MIT"
license-files = ["LICENSE.txt"]
dynamic = ["version"]
requires-python = ">=3.10"
dependencies = ["PyYAML"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]

[project.urls]
Homepage = "https://github.com/xflr6/dmengine"
Changelog = "https://github.com/xflr6/dmengine/blob/master/CHANGES.rst"
"Issue Tracker" = "https://github.com/xflr6/dmengine/issues"
CI = "https://github.com/xflr6/dmengine/actions"
Coverage = "https://app.codecov.io/gh/xflr6/dmengine"

[project.scripts]
dmengine = "dmengine.__main__:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
platforms = ["any"]

[tool.setuptools.package-data]
dmengine = ["reporting/template.tex"]

[tool.setuptools.dynamic]
version = {attr = "dmengine.__version__"}

[dependency-groups]
dev = [  # $ pip install -e . --group dev
  "build",
  "twine",
  "wheel",
  { include-group = "lint" },
  { include-group = "test" },
  { include-group = "typing" },
]
lint = [
  "flake8",
  "Flake8-pyproject",
  "pep8-naming",
]
test = [
  "coverage",
  "pytest>=7",
  "pytest-cov",
]
typing = [
  "mypy",
  "types-PyYAML",
]

[tool.mypy]
packages = ["dmengine"]

[tool.flake8]
exclude = [".tox"]
ignore = ["E126", "E128", "W503"]
max-line-length = 100

[tool.pytest.ini_options]
minversion = "6"
testpaths = ["dmengine", "tests"]
addopts = [
  "--doctest-modules",
  "--doctest-glob='*.rst'",
  "--cov", "--cov-report=term", "--cov-report=html",
  "--strict-config", "--strict-markers",
]
log_cli_level = "WARNING"
log_file = "test-log.txt"
log_file_level = "DEBUG"

[tool.coverage.run]
source = ["dmengine"]
branch = false
