[metadata]
license_file = LICENSE.txt

[sdist]
formats = zip

[bdist_wheel]
universal = 1

[tool:pytest]
minversion = 4
testpaths = dmengine tests
addopts =
  --doctest-modules --doctest-glob='*.rst'
  --cov --cov-report=term --cov-report=html

[coverage:run]
source = dmengine
branch = false

[flake8]
ignore = E126,E128,W503
max-line-length = 100
exclude = .tox
