[metadata]
license_files = LICENSE.txt

[sdist]
formats = zip

[tool:pytest]
minversion = 6
testpaths =
  dmengine
  tests
addopts =
  --doctest-modules
  --doctest-glob='*.rst'
  --cov --cov-report=term --cov-report=html
  --strict-config --strict-markers
log_cli_level = WARNING
log_file = test-log.txt
log_file_level = DEBUG

[coverage:run]
source = dmengine
branch = false

[flake8]
ignore = E126,E128,W503
max-line-length = 100
exclude = .tox
